# dif-rust

./: Cargo.toml  README.md  pyproject.toml  run_gui.py
.github/workflows/: CI.yml
python/dif/: __init__.py  dif.pyi  finder.py  gui.py
src/: lib.rs
